appId: com.dotmoovs.dotmoovs
name: Should create account successful
tags: 
  - Regressive
  - Sign Up
env:
  NAME: Lucas Oliveira
  EMAIL: luan.oliveira@dotmoovs.com
  PASSWORD: Testes
  YEAR: 2011
  DAY: 11
onFlowStart:
  - runFlow: ../../Setup.yaml
onFlowComplete:
  - runFlow: ../../utils/logout.yaml
jsEngine: graaljs
---
- runScript: ../../PageObject/SignUp.js
- tapOn: ${output.SignUp.firsTimeBtn}
- assertVisible: ${output.SignUp.signUpTitle}
- tapOn: ${output.SignUp.nameField}
- inputText: ${NAME}
- tapOn: ${output.SignUp.birthdateText}
- tapOn: 
    id: ${output.SignUp.yearText}
- scrollUntilVisible:
    element:
      text: ${YEAR}
    direction: UP
    timeout: 20000
    speed: 40
    visibilityPercentage: 60
    centerElement: false
- tapOn: ${YEAR}
- tapOn: ${DAY}
- tapOn: "OK"
- assertNotVisible: ${output.SignUp.messageBirthdate}
- tapOn: ${output.SignUp.maleOption}
- tapOn: ${output.SignUp.continueBtn}
- assertVisible: ${output.SignUp.signUpTitle}
- tapOn: ${output.SignUp.emailField}
- inputText: ${EMAIL}
- tapOn: ${output.SignUp.passwordField}
- inputText: ${PASSWORD}
- tapOn: ${output.SignUp.createAccountBtn}
- assertVisible: ${output.SignUp.verificationSentText}
- tapOn: ${output.SignUp.emailVerifiedBtn}
- tapOn: ${output.SignUp.chooseGoalText}
- tapOn: ${output.SignUp.gonnaDoItBtn}
- assertVisible: ${output.SignUp.creatingRoutineText}
- tapOn: ${output.SignUp.gonnaDoItBtn}
- assertVisible: ${output.SignUp.dontMissAchievementText}
- tapOn: ${output.SignUp.activateBtn}
- assertVisible: ${output.SignUp.planText}
- assertVisible: ${output.SignUp.greetingText}
- tapOn: ${output.SignUp.trainerIntroText}
- assertNoDefectsWithAI