appId: com.dotmoovs.dotmoovs
name: Should password uppercase
tags: 
  - Regressive
  - Sign Up
env:
  NAME: Lucas
  EMAIL: luan.oliveira@dotmoovs.com
  PASSWORD: TESTES
  YEAR: 2011
  DAY: 11
onFlowStart:
  - runFlow: ../../Setup.yaml
onFlowComplete:
  - runFlow: ../../Teardown.yaml
jsEngine: graaljs
---
- runScript: ../../PageObject/SignUp.js
- tapOn: ${output.SignUp.firsTimeBtn}
- tapOn: ${output.SignUp.nameField}
- inputText: ${NAME}
- tapOn: ${output.SignUp.birthdateText}
- tapOn: 
    id: ${output.SignUp.yearText}
- scrollUntilVisible:
    element:
      text: ${YEAR}
    direction: UP
    timeout: 20000
    speed: 40
    visibilityPercentage: 60
    centerElement: false
- tapOn: ${YEAR}
- tapOn: ${DAY}
- tapOn: "OK"
- tapOn: ${output.SignUp.maleOption}
- tapOn: ${output.SignUp.continueBtn}
- tapOn: ${output.SignUp.emailField}
- inputText: ${EMAIL}
- tapOn: ${output.SignUp.passwordField}
- inputText: ${PASSWORD}
- assertVisible: ${output.SignUp.minCharacterPasswordText}
- assertVisible: ${output.SignUp.lowercaseLetterText}
- assertVisible: ${output.SignUp.uppercaseLetterText}
- assertNoDefectsWithAI