appId: com.dotmoovs.dotmoovs
name: Should create account successful
tags: 
  - Sign Up
env:
  NAME: Lucas Oliveira
  EMAILANDROID: lucas.android@gmail.com
  EMAILIOS: lucas.ios@gmail.com
  PASSWORD: Testes
onFlowStart:
  - runFlow: ../Setup.yaml
onFlowComplete:
  - runFlow: ../utils/logout.yaml
  - runFlow: ../Teardown.yaml
jsEngine: graaljs
---
- runScript: ../PageObject/SignUp.js
- tapOn: ${output.SignUp.firsTimeBtn}
- assertVisible: ${output.SignUp.signUpTitle}
- tapOn: ${output.SignUp.nameField}
- inputText: ${NAME}
- tapOn: 
    text: ${output.birthdateText}
- tapOn:
    id: ${output.yearId}
- runFlow:
    when:
      platform: iOS
    file: ../iOS/Sign_Up/DatePicker.yaml
- runFlow:
    when:
      platform: Android
    file: ../Android/Sign_Up/DatePicker.yaml
- assertNotVisible: ${output.SignUp.messageBirthdate}
- tapOn: ${output.SignUp.maleOption}
- tapOn: ${output.SignUp.continueBtn}
- assertVisible: ${output.SignUp.signUpTitle}
- tapOn: ${output.SignUp.emailField}
- runFlow:
    when:
      platform: iOS
    commands:
      - inputText: ${EMAILIOS}
- runFlow:
    when:
      platform: Android
    commands:
      - inputText: ${EMAILANDROID}
- tapOn: ${output.SignUp.passwordField}
- inputText: ${PASSWORD}
- tapOn: ${output.SignUp.createAccountBtn}
- assertVisible: ${output.SignUp.verificationSentText}
- tapOn: ${output.SignUp.emailVerifiedBtn}
- tapOn: ${output.SignUp.chooseGoalText}
- tapOn: ${output.SignUp.gonnaDoItBtn}
- assertVisible: ${output.SignUp.creatingRoutineText}
- tapOn: ${output.SignUp.gonnaDoItBtn}
- assertVisible: ${output.SignUp.dontMissAchievementText}
- tapOn: ${output.SignUp.activateBtn}
- assertVisible: ${output.SignUp.planText}
- assertVisible: ${output.SignUp.greetingText}
- tapOn: ${output.SignUp.trainerIntroText}
- assertNoDefectsWithAI