appId: com.dotmoovs.dotmoovs
name: Should maximum name
tags: 
  - Sign Up
env:
  NAME: Lucas Nascimento Oliveira
onFlowStart:
  - runFlow: ../Setup.yaml
onFlowComplete:
  - runFlow: ../Teardown.yaml
jsEngine: graaljs
---
- runScript: ../PageObject/SignUp.js
- tapOn: ${output.SignUp.firsTimeBtn}
- tapOn: ${output.SignUp.nameField}
- inputText: ${NAME}
- assertVisible: ${output.SignUp.minCharacterText}
- assertVisible: ${output.SignUp.maxCharacterText}
- assertVisible: ${output.SignUp.onlyCharacterText}
- assertNoDefectsWithAI