appId: com.dotmoovs.dotmoovs
name: Should password uppercase
tags: 
  - Sign Up
env:
  NAME: Lucas
  EMAILANDROID: lucas.android@gmail.com
  EMAILIOS: lucas.ios@gmail.com
  PASSWORD: TESTES
onFlowStart:
  - runFlow: ../Setup.yaml
onFlowComplete:
  - runFlow: ../Teardown.yaml
jsEngine: graaljs
---
- runScript: ../PageObject/SignUp.js
- tapOn: ${output.SignUp.firsTimeBtn}
- tapOn: ${output.SignUp.nameField}
- inputText: ${NAME}
- tapOn: 
    text: ${output.birthdateText}
- tapOn:
    id: ${output.yearId}
- runFlow:
    when:
      platform: iOS
    file: ../iOS/Sign_Up/DatePicker.yaml
- runFlow:
    when:
      platform: Android
    file: ../Android/Sign_Up/DatePicker.yaml
- tapOn: ${output.SignUp.maleOption}
- tapOn: ${output.SignUp.continueBtn}
- tapOn: ${output.SignUp.emailField}
- runFlow:
    when:
      platform: iOS
    commands:
      - inputText: ${EMAILIOS}
- runFlow:
    when:
      platform: Android
    commands:
      - inputText: ${EMAILANDROID}
- tapOn: ${output.SignUp.passwordField}
- inputText: ${PASSWORD}
- assertVisible: ${output.SignUp.minCharacterPasswordText}
- assertVisible: ${output.SignUp.lowercaseLetterText}
- assertVisible: ${output.SignUp.uppercaseLetterText}
- assertNoDefectsWithAI