appId: com.dotmoovs.dotmoovs
.env:
  
onFlowComplete:
 - runFlow: ../Teardown.yaml
jsEngine: graaljs
---
- runScript: ../PageObject/Profile.js
- tapOn: ${output.profileButton}
- tapOn:
    id: ${output.Profile.settingsProfile}
- scrollUntilVisible:
    element:
      text: ${output.Profile.logoutButton}
    direction: "DOWN"
    timeout: 20000
    speed: 40
    visibilityPercentage: 60
    centerElement: false
- tapOn: ${output.Profile.logoutButton}
- assertVisible: ${output.Profile.messageLogout}
- tapOn: ${output.Profile.confirmLogoutButton}